force-app/main/default/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Venues</relationshipLabel>
        <relationshipName>Venues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_List_1</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Geo_Location__c</fullName>
        <label>Geo Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Legacy_Venue_ID__c</fullName>
        <label>Legacy Venue ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <label>Managing Faculty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Monash_Faculty</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Map_Link__c</fullName>
        <label>Map Link</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Maximum_Capacity__c</fullName>
        <label>Maximum Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Capacity__c</fullName>
        <label>Minimum Capacity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parking_Details__c</fullName>
        <label>Parking Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suburb__c</fullName>
        <label>Suburb</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transportation_Details__c</fullName>
        <label>Transportation Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Course_Type</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Course_Type__c,&apos;Academic_Course&apos;), CONTAINS($Profile.Name,&apos;Professional Development&apos;))</errorConditionFormula>
        <errorDisplayField>Course_Type__c</errorDisplayField>
        <errorMessage>You cannot select type of Academic Course</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Managing_Faculty</fullName>
        <active>true</active>
        <description>Used in PD</description>
        <errorConditionFormula>OR (
AND ($UserRole.Name = &apos;Education Short Courses Team&apos;, NOT(ISPICKVAL(Managing_Faculty__c,&apos;Faculty of Education&apos;))),
AND ($UserRole.Name = &apos;BusEco Short Courses Team&apos;, NOT(ISPICKVAL(Managing_Faculty__c,&apos;Faculty of Business and Economics&apos;))),
AND ($UserRole.Name = &apos;Medicine Short Courses Team&apos;,
AND( NOT(ISPICKVAL(Managing_Faculty__c,&apos;Faculty of Medicine, Nursing and Health Sciences&apos;)),
NOT(ISPICKVAL(Managing_Faculty__c,&apos;School of Clinical Sciences (SCS)&apos;)),
NOT(ISPICKVAL(Managing_Faculty__c,&apos;Monash Centre for Health Research and Implementation (MCHRI)&apos;)),
NOT(ISPICKVAL(Managing_Faculty__c,&apos;MNHS Student Academic Support Unit (SASU)&apos;)),
NOT(ISPICKVAL(Managing_Faculty__c,&apos;The School of Public Health and Preventive Medicine (SPHPM)&apos;)))),
AND ($UserRole.Name = &apos;Arts Short Courses Team&apos;, NOT(ISPICKVAL(Managing_Faculty__c,&apos;Faculty of Arts&apos;))),
AND ($UserRole.Name = &apos;MSDI Short Courses Team&apos;, NOT(ISPICKVAL(Managing_Faculty__c,&apos;Monash Sustainable Development Institute&apos;)))
)</errorConditionFormula>
        <errorDisplayField>Managing_Faculty__c</errorDisplayField>
        <errorMessage>Please make sure you create and edit records belong to your faculty</errorMessage>
    </validationRules>
</CustomObject>